k8s/geo-racer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geo-racer-deployment
  labels:
    app: geo-racer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: geo-racer
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 34%
      maxUnavailable: 34%
  template:
    metadata:
      name: geo-racer
      labels:
        app: geo-racer
    spec:
      containers:
      - name: geo-racer
        image: zkayser/geo-racer:v0.1.10
        resources: {}
        securityContext:
          privileged: false
          procMount: Default
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      imagePullSecrets:
        - name: geo-racer-docker-key
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
